[workspace]
resolver = "2"
members = [
    "core",
    "chain/*",
    "graphql",
    "node",
    "runtime/*",
    "server/*",
    "store/*",
    "substreams/*",
    "graph",
    "tests",
    "graph/derive",
]

[workspace.package]
version = "0.35.0"
edition = "2021"
authors = ["The Graph core developers & contributors"]
readme = "README.md"
homepage = "https://thegraph.com"
repository = "https://github.com/graphprotocol/graph-node"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_derives = "2.1.4"
diesel-dynamic-schema = "0.2.1"
diesel_migrations = "2.1.0"
prost = "0.12.6"
prost-types = "0.12.6"
serde = { version = "1.0.126", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.21"
sqlparser = "0.46.0"
syn = { version = "2.0.66", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls-roots", "gzip"] }
tonic-build = { version = "0.11.0", features = ["prost"] }
wasmtime = "15.0.1"
wasmparser = "0.118.1"
clap = { version = "4.5.4", features = ["derive", "env"] }

# Incremental compilation on Rust 1.58 causes an ICE on build. As soon as graph node builds again, these can be removed.
[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
