[workspace]
resolver = "2"
members = [
    "core",
    "core/graphman",
    "core/graphman_store",
    "chain/common",
    "chain/ethereum",
    "chain/near",
    "gnd",
    "graphql",
    "node",
    "runtime/derive",
    "runtime/test",
    "runtime/wasm",
    "server/graphman",
    "server/http",
    "server/index-node",
    "server/json-rpc",
    "server/metrics",
    "store/postgres",
    "store/test-store",
    "graph",
    "tests",
    "graph/derive",
]

[workspace.package]
version = "0.36.0"
edition = "2021"
authors = ["The Graph core developers & contributors"]
readme = "README.md"
homepage = "https://thegraph.com"
repository = "https://github.com/graphprotocol/graph-node"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "1.6.3", features = ["dyn-abi", "json-abi", "full", "arbitrary", "json-rpc", "serde"] }
alloy-rpc-types = "1.0.33"
anyhow = "1.0"
async-graphql = { version = "7.2.1", features = ["chrono"] }
async-graphql-axum = "7.2.1"
async-trait = "0.1.74"
axum = "0.8.8"
chrono = "0.4.43"
bs58 = "0.5.1"
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
derivative = "2.2.0"
diesel = { version = "2.2.7", features = [
    "postgres",
    "serde_json",
    "numeric",
    "r2d2",
    "chrono",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel-async = { version = "0.7.4", features = ["deadpool", "async-connection-wrapper", "tokio", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel-dynamic-schema = { version = "0.2.3", features = ["postgres"] }
diesel_derives = "2.3.7"
diesel_migrations = "2.3.1"
env_logger = "0.11.8"
envconfig = "0.11.1"
git-testament = "0.2"
graph = { path = "./graph" }
graph-core = { path = "./core" }
graph-store-postgres = { path = "./store/postgres" }
graphman-server = { path = "./server/graphman" }
graphman = { path = "./core/graphman" }
graphman-store = { path = "./core/graphman_store" }
graphql-tools = "0.5.1"
Inflector = "0.11.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
prost = "0.14"
prost-types = "0.14"
redis = { version = "1.0.3", features = [
    "aio",
    "connection-manager",
    "tokio-comp",
] }
regex = "1.5.4"
reqwest = "0.12.23"
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0.126", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.21"
slog = { version = "2.8.2", features = ["release_max_level_trace", "max_level_trace"] }
sqlparser = { version = "0.60.0", features = ["visitor"] }
strum = { version = "0.27", features = ["derive"] }
syn = { version = "2.0.114", features = ["full"] }
test-store = { path = "./store/test-store" }
thiserror = "2.0.18"
deadpool = { version = "0.12", features = ["rt_tokio_1", "managed"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-retry = "0.3.0"

tonic = { version = "0.14", features = ["tls-native-roots", "gzip"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower-http = { version = "0.6.8", features = ["cors"] }
tower = { version = "0.5.1", features = ["full"] }
wasmparser = "0.118.1"
wasmtime = { version = "38.0.4", features = ["async"] }
rand = { version = "0.9.2", features = ["os_rng"] }
prometheus = "0.14.0"

# Dependencies related to Amp subgraphs
ahash = "0.8.11"
arrow = { version = "=57.3.0" }
arrow-flight = { version = "=57.3.0", features = ["flight-sql-experimental"] }
futures = "0.3.31"
half = "2.7.1"
indoc = "2.0.7"
lazy-regex = "3.4.1"
parking_lot = "0.12.4"
sqlparser-latest = { version = "0.57.0", package = "sqlparser", features = ["visitor"] }
tokio-util = "0.7.15"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.release]
opt-level = 's'
strip = "debuginfo"
