[package]
name = "gnd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gnd"
path = "src/main.rs"

[[test]]
name = "cli_commands"
path = "tests/cli_commands.rs"

[[test]]
name = "codegen_verification"
path = "tests/codegen_verification.rs"

[dependencies]
# Core graph dependencies
graph = { path = "../graph" }
graph-core = { path = "../core" }
graph-node = { path = "../node" }

# Direct dependencies from current dev.rs
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
env_logger = "0.11.8"
git-testament = "0.2"
lazy_static = "1.5.0"
serde = { workspace = true }
tokio = { workspace = true }
tokio-util.workspace = true

# File watching
notify = "8.2.0"
globset = "0.4.18"

# Config and auth
url = "2"
dirs = "5"
serde_json = { workspace = true }
pq-sys = { version = "0.7.5", features = ["bundled"] }

# HTTP client for Graph Node API
reqwest = { workspace = true }
thiserror = { workspace = true }

# Console output
indicatif = "0.17"
console = "0.15"

# Code generation
graphql-parser = "0.4"
regex = "1"
ethabi = "17.2"
serde_yaml = "0.9"
Inflector = { workspace = true }

# Migrations
semver = "1"

# Build command
sha1 = "0.10"

# Test command
which = "7"

# Interactive prompts
inquire = "0.7"

# Temp directories for init
tempfile = "3"

# Browser opening for publish command
open = "5"

[target.'cfg(unix)'.dependencies]
pgtemp = { git = "https://github.com/graphprotocol/pgtemp", branch = "initdb-args" }

[dev-dependencies]
tempfile = "3"
walkdir = "2"
similar = "2"
