[package]
name = "graph"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
base64 = "=0.21.7"
anyhow = "1.0"
async-trait = { workspace = true }
async-stream = "0.3"
atomic_refcell = "0.1.13"
# We require this precise version of bigdecimal. Updating to later versions
# has caused PoI differences; if you update this version, you will need to
# make sure that it does not cause PoI changes
old_bigdecimal = { version = "=0.1.2", features = [
    "serde",
], package = "bigdecimal" }
bytes = "1.0.1"
bs58 = { workspace = true }
cid = "0.11.1"
derivative = { workspace = true }
graph_derive = { path = "./derive" }
diesel = { workspace = true }
diesel_derives = { workspace = true }
chrono = "0.4.43"
envconfig = { workspace = true }
Inflector = "0.11.3"
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart", "gzip", "brotli", "deflate"] }
hex = "0.4.3"
http0 = { version = "0", package = "http" }
http = "1"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures01 = { package = "futures", version = "0.1.31" }
lru_time_cache = "0.11"
graphql-tools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { version = "=0.2.6", features = ["serde"] }
num-integer = { version = "=0.1.46" }
num-traits = "=0.2.19"
rand.workspace = true
redis = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10.9"
slog = { workspace = true }
sqlparser = { workspace = true }
# TODO: This should be reverted to the latest version once it's published
# stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
# stable-hash = { version = "0.4.2" }
stable-hash = { git = "https://github.com/graphprotocol/stable-hash", branch = "main" }
stable-hash_legacy = { git = "https://github.com/graphprotocol/stable-hash", branch = "old", package = "stable-hash" }
strum_macros = "0.27.2"
slog-async = "2.5.0"
slog-envlogger = "2.1.0"
slog-term = "2.7.0"
petgraph = "0.8.3"
tiny-keccak = "1.5.0"
tokio = { workspace = true}
tokio-stream = { workspace = true }
tokio-retry = { workspace = true }
toml = "0.9.11"
url = "2.5.8"
prometheus = "0.14.0"
priority-queue = "2.7.0"
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

futures03 = { version = "0.3.31", package = "futures", features = ["compat"] }
wasmparser = "0.118.1"
thiserror = { workspace = true }
parking_lot = "0.12.5"
portable-atomic = { version = "1.13", features = ["fallback"] }
itertools = "0.14.0"
defer = "0.2"

serde_plain = "1.0.2"
csv = "1.4.0"
object_store = { version = "0.13.1", features = ["gcp"] }

# Dependencies related to Amp subgraphs
ahash.workspace = true
arrow-flight.workspace = true
arrow.workspace = true
half.workspace = true
indoc.workspace = true
lazy-regex.workspace = true
sqlparser-latest.workspace = true
tokio-util.workspace = true

[dev-dependencies]
clap.workspace = true
maplit = "1.0.2"
hex-literal = "1.1"
wiremock = "0.6.5"

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
