[package]
name = "graph-graphql"
version.workspace = true
edition.workspace = true

[dependencies]
crossbeam = "0.8"
graph = { path = "../graph" }
graphql-parser = "0.4.0"
graphql-tools = "0.2.1"
indexmap = "1.9"
Inflector = "0.11.3"
lazy_static = "1.2.0"
stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
stable-hash = { version = "0.4.2" }
defer = "0.1"
parking_lot = "0.12"
anyhow = "1.0"
async-recursion = "1.0.0"
base64 = "0.13.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-store = { path = "../store/test-store" }
graph-chain-ethereum = { path = "../chain/ethereum" }
