[package]
name = "graph-graphql"
version.workspace = true
edition.workspace = true

[dependencies]
crossbeam = "0.8"
graph = { path = "../graph" }
graphql-tools = "0.2.5"
lazy_static = "1.5.0"
stable-hash = { git = "https://github.com/graphprotocol/stable-hash", branch = "main"}
stable-hash_legacy = { git = "https://github.com/graphprotocol/stable-hash", branch = "old", package = "stable-hash" }
parking_lot = "0.12"
anyhow = "1.0"
async-recursion = "1.1.1"
