[package]
name = "graph-graphql"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
crossbeam = "0.8"
graph = { path = "../graph" }
graphql-tools = { workspace = true }
lazy_static = { workspace = true }
stable-hash = { git = "https://github.com/graphprotocol/stable-hash", branch = "main"}
stable-hash_legacy = { git = "https://github.com/graphprotocol/stable-hash", branch = "old", package = "stable-hash" }
parking_lot = "0.12"
anyhow = "1.0"
async-recursion = "1.1.1"

[lints]
workspace = true
