[package]
name = "graph-node"
version = "0.26.0"
edition = "2021"
default-run = "graph-node"

[[bin]]
name = "graph-node"
path = "src/main.rs"

[[bin]]
name = "graphman"
path = "src/bin/manager.rs"

[dependencies]
clap = "3.2.1"
env_logger = "0.9.0"
git-testament = "0.2"
graphql-parser = "0.4.0"
futures = { version = "0.3.1", features = ["compat"] }
lazy_static = "1.2.0"
url = "2.2.1"
crossbeam-channel = "0.5.5"
graph = { path = "../graph" }
graph-core = { path = "../core" }
graph-chain-arweave = { path = "../chain/arweave" }
graph-chain-ethereum = { path = "../chain/ethereum" }
graph-chain-near = { path = "../chain/near" }
graph-chain-cosmos = { path = "../chain/cosmos" }
graph-graphql = { path = "../graphql" }
graph-runtime-wasm = { path = "../runtime/wasm" }
graph-server-http = { path = "../server/http" }
graph-server-index-node = { path = "../server/index-node" }
graph-server-json-rpc = { path = "../server/json-rpc"}
graph-server-websocket = { path = "../server/websocket" }
graph-server-metrics = { path = "../server/metrics" }
graph-store-postgres = { path = "../store/postgres" }
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_regex = "1.1.0"
structopt = { version = "0.3.26", features = ["wrap_help"] }
toml = "0.5.7"
shellexpand = "2.1.0"
diesel = "1.4.8"
http = "0.2.5" # must be compatible with the version rust-web3 uses
prometheus = { version ="0.13.1", features = ["push"] }
json-structural-diff = {version = "0.1", features = ["colorize"] }

[dev-dependencies]
assert_cli = "0.6"
