[package]
name = "graph-tests"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
assert-json-diff = "2.0.2"
async-stream = "0.3.5"
bollard = "0.10"
futures = { version = "0.3", features = ["compat"] }
graph = { path = "../graph" }
graph-chain-ethereum = { path = "../chain/ethereum" }
graph-node = { path = "../node" }
graph-core = { path = "../core" }
graph-graphql = { path = "../graphql" }
graph-store-postgres = { path = "../store/postgres" }
graph-runtime-wasm = { path = "../runtime/wasm" }
graph-server-index-node = { path = "../server/index-node" }
graphql-parser = "0.4.0"
hyper = "0.14"
serde = "1.0"
serde_yaml = "0.9.21"
slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
tokio = { version = "1.28.0", features = ["rt", "macros", "process"] }
uuid = { version = "1.3.2", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.71"
bollard = "0.10"
lazy_static = "1.4.0"
tokio-stream = "0.1"
cid = "0.10.1"
graph-chain-near = { path = "../chain/near" }
