[package]
name = "graph-tests"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
assert-json-diff = "2.0.2"
async-stream = "0.3.6"
async-trait = { workspace = true }
graph = { path = "../graph" }
graph-chain-ethereum = { path = "../chain/ethereum" }
graph-node = { path = "../node" }
graph-core = { path = "../core" }
graph-graphql = { path = "../graphql" }
graph-store-postgres = { path = "../store/postgres" }
graph-server-index-node = { path = "../server/index-node" }
graph-runtime-wasm = { path = "../runtime/wasm" }
serde = { workspace = true }
serde_yaml = { workspace = true }
slog = { workspace = true }
tokio = { version = "1.49.0", features = ["rt", "macros", "process"] }
tokio-util.workspace = true

[dev-dependencies]
anyhow = "1.0.100"
tokio-stream = "0.1"

[lints]
workspace = true
