[package]
name = "thegraph-core"
version = "0.1.0"

[dependencies]
futures = "0.1.21"
graphql-parser = "0.2.0"
slog = "2.2.3"
thegraph = { path = "../thegraph" }
thegraph-graphql-utils = { path = "../thegraph-graphql-utils" }
thegraph-runtime = { path = "../thegraph-runtime" }
tokio-core = "0.1.17"
serde = "1.0"
serde_yaml = "0.7"
ipfs-api = "0.5.0-alpha1"

[dev-dependencies]
ethabi = "5.1.1"
thegraph-mock = { path = "../thegraph-mock" }
