[package]
name = "thegraph-hyper"
version = "0.1.0"

[dependencies]
futures = "0.1.21"
graphql-parser = "0.2.0"
http = "0.1.5"
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
serde_json = "1.0"
slog = "2.2.3"
thegraph = { path = "../thegraph" }
tokio = "0.1.6"

[dev-dependencies]
tokio-core = "0.1.17"