[package]
name = "thegraph-local-node"
version = "0.1.0"

[dependencies]
clap = "2.31.2"
futures = "0.1.21"
sentry = "0.3.1"
slog = "2.2.3"
tokio = "0.1.5"
tokio-core = "0.1.17"
thegraph = { path = "../thegraph" }
thegraph-core = { path = "../thegraph-core" }
thegraph-hyper = { path = "../thegraph-hyper" }
thegraph-mock = { path = "../thegraph-mock" }
thegraph-store-postgres-diesel = { path = "../thegraph-store-postgres-diesel" }
