[package]
name = "thegraph-runtime-nodejs"
version = "0.1.0"

[dependencies]
futures = "0.1.21"
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
http = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.2.3"
tempfile = "3.0"
thegraph = { path = "../thegraph" }
tokio-core = "0.1.6"