[package]
name = "thegraph-store-postgres-diesel"
version = "0.1.0"

[dependencies]
diesel = { version = "1.3.0", features = ["postgres"] }
diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema" }
futures = "0.1.21"
slog = "2.2.3"
thegraph = { path = "../thegraph" }
tokio = "0.1.6"
tokio-core = "0.1.17"
