[package]
name = "thegraph"
version = "0.1.0"

[dependencies]
ethabi = "5.1"
ethereum-types = "0.3"
hex = "0.3.2"
futures = "0.1.21"
graphql-parser = "0.2.1"
ipfs-api = "0.5.0-alpha1"
parity-wasm = "0.31"
failure = "0.1.1"
num-bigint = { version = "0.2.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
slog = "2.2.3"
slog-async = "2.3.0"
slog-term = "2.4.0"
tiny-keccak = "1.0"
tokio = "0.1.6"
tokio-core = "0.1.17"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
