[package]
name = "graph-chain-arweave"
version = "0.28.0"
edition = "2021"

[build-dependencies]
tonic-build = { version = "0.7.1", features = ["prost"]}

[dependencies]
base64-url = "1.4.13"
graph = { path = "../../graph" }
prost = "0.10.1"
prost-types = "0.10.1"
serde = "1.0"
sha2 = "0.10.6"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }

[dev-dependencies]
diesel = { version = "2.0.2", features = ["postgres", "serde_json", "numeric", "r2d2"] }
